sql/sql_show.cc
@@ -1228,12 +1228,11 @@ static void append_directory(THD *thd, String *packet, const char *dir_type,
     packet->append(dir_type);
     packet->append(" DIRECTORY='", 12);
 #ifdef __WIN__
-    char *winfilename = strdup(filename);
+    char *winfilename = thd->memdup(filename, length);
     for (uint i=0; i < length; i++)
 	    if (winfilename[i] == '\\')
 		    winfilename[i] = '/';
     packet->append(winfilename, length);
-    free(winfilename);
 #else
     packet->append(filename, length);
 #endif
